syntax = "proto3";

option csharp_namespace = "Fibertest30.Api";
package fibertest30.rtu_tree;

service RtuTree {
	rpc GetRtuTree (GetRtuTreeRequest) returns (GetRtuTreeResponse);
    rpc GetRtu (GetRtuRequest) returns (GetRtuResponse);
}

enum RtuMaker {
    Iit = 0;
    Veex = 1;
}

enum RtuPartState { 
    NotSetYet = 0;
    RtuPartState_Ok = 1; // can't be just Ok
	Broken = -1; 
}

enum MonitoringState {
    MonitoringState_Unknown = 0; // can't be just Unknown
    Off = 1;
    On = 2;
}

enum FiberState {
    //
    NotInTrace = 0x0;
    NotJoined = 0x1;
    //
    FiberState_Unknown = 0x2; // can't be just Unknown
    NotInZone = 0x3;
    //
    FiberState_Ok = 0x4; // can't be just Ok
    Suspicion = 0x5;
    Minor = 0x6;
    Major = 0x7;
    Critical = 0x8;
    User = 0x9;
    FiberBreak = 0xA;
    NoFiber = 0xB;
    //
    HighLighted = 0xE;
    DistanceMeasurement = 0xF;
    //
    Nothing = -1;
}

enum TceLinkState {
  NoLink = 0;
  SnmpTrapOff = 1;
  SnmpTrapOn = 2;
}

message NetAddress {
    string ip4Address = 1;
    string hostName = 2;
    int32 port = 3;
}

message LeafOfAcceptableMeasParams {
    repeated string resolutions = 1;
    repeated string pulseDurations = 2;
    repeated string periodsToAverage = 3;
    repeated string measCountsToAverage = 4;
}

message DistanceMeasParam {
    string distance = 1;
    LeafOfAcceptableMeasParams otherParams = 2;
}

message BranchOfAcceptableMeasParams {
    repeated DistanceMeasParam distances = 1;
    double backscatterCoeff = 2;
    double refractiveIndex = 3;
}

message UnitMeasParam {
    string unit = 1;
    BranchOfAcceptableMeasParams branch = 2;
}

message TreeOfAcceptableMeasParams {
    repeated UnitMeasParam units = 1;
}

message MeasurementSettingsStrings {
    string laser = 1;
    string backscatterCoeff = 2;
    string refractiveIndex = 3;
    string distance = 4;
    string pulse = 5;
    string resolution = 6;
    string averagingTime = 7;
}

message PortOfOtau {
    optional string otauId = 1; // main MAK-100 OTAU has no ID, but BOP has its ID
    optional NetAddress otauNetAddress = 2; // only for BOP
    
    string otauSerial = 3;
    int32 opticalPort = 4;
    bool isPortOnMainCharon = 5;
    optional int32 mainCharonPort = 6; // only for BOP
}

message Trace {
	string traceId = 1;
	string rtuId = 2;
	string title = 3;
    optional PortOfOtau port = 4; // there is no PortOfOtau if trace is detached
	bool isAttached = 5;
    FiberState state = 6;
    bool hasEnoughBaseRefsToPerformMonitoring = 7;
    bool isIncludedInMonitoringCycle = 8;
    TceLinkState tceLinkState = 9;
}

message Bop {
    string bopId = 1;
	string rtuId = 2;
    NetAddress bopNetAddress = 3;
    int32 masterPort = 4;
    bool isOk = 5;
    string serial = 6;
    int32 portCount = 7;

	repeated Trace traces = 8;
}

message Rtu {
	string rtuId = 1;
    RtuMaker rtuMaker = 2;
	string title = 3;

    optional string mfid = 4;
    optional string mfsn = 5;
    optional string omid = 6;
    optional string omsn = 7;
    optional string serial = 8;

    int32 ownPortCount = 9;
    int32 fullPortCount = 10;

    NetAddress mainChannel = 11;
	RtuPartState mainChannelState = 12;
    NetAddress reserveChannel = 13;
	RtuPartState reserveChannelState = 14;
    bool isReserveChannelSet = 15;

    NetAddress otdrNetAddress = 16;
	MonitoringState monitoringMode = 17;
    
    optional string version = 18;
    optional string version2 = 19;

	repeated Bop bops = 20;
	repeated Trace traces = 21;

    optional TreeOfAcceptableMeasParams treeOfAcceptableMeasParams = 22;
}

message GetRtuTreeRequest {}
message GetRtuTreeResponse {
	repeated Rtu rtus = 1;
}

message GetRtuRequest {
	string rtuId = 1;
}
message GetRtuResponse {
	Rtu rtu = 1;
}
